# FlashAudio

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  setup_env.sh
.github/workflows/: ci.yml
configs/: flashaudio_classification.yaml  flashaudio_music.yaml  flashaudio_stt.yaml  flashaudio_tts.yaml
docker/: Dockerfile  docker-compose.yml
docs/: Audio-Generation.md  FAQ.md  Home.md  Installation.md  Quick-Start.md  Speech-to-Text.md  Text-to-Speech.md  Voice-Cloning.md
examples/: audio_classify.py  benchmark_audio.py  speech_to_text.py  text_to_speech.py  voice_cloning.py
flashaudio/: __init__.py  cli.py  registry.py
flashaudio/analytics/: __init__.py  benchmark.py  metrics.py
flashaudio/audio/: __init__.py  classification.py  emotion.py  event_detection.py  features.py  generation.py  separation.py
flashaudio/cfg/: __init__.py  config.py
flashaudio/data/: __init__.py  audio_utils.py  datasets.py  transforms.py
flashaudio/engine/: __init__.py  exporter.py  predictor.py  trainer.py  validator.py
flashaudio/models/: __init__.py  flashaudio_model.py  lora.py
flashaudio/models/architectures/: __init__.py  audio_classifier.py  conformer.py  hifi_gan.py  tts_model.py  vits.py  voice_encoder.py  wav2vec2.py  whisper.py
flashaudio/solutions/: __init__.py  audio_analyzer.py  narrator.py  transcriber.py
flashaudio/speech/: __init__.py  diarization.py  stt.py  tts.py  voice_clone.py
flashaudio/utils/: __init__.py  callbacks.py  io.py  visualize.py
tests/: test_comprehensive.py  test_models.py  test_new_models.py  test_registry.py  test_speech.py
